After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 450676 - Crashed when trying to perform a t-test (any version) on Windows XP SP2
Crashed when trying to perform a t-test (any version) on Windows XP SP2
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Analytics
1.7.x
Other All
: Normal critical
: ---
Assigned To: Morten Welinder
Jody Goldberg
: 453644 461760 486415 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2007-06-24 17:21 UTC by g.m.feldman
Modified: 2007-10-15 20:17 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description g.m.feldman 2007-06-24 17:21:39 UTC
Steps to reproduce:
1. Gnumeric version 1.7.10
2. sample data were columns A and B and each contained 5 values.
3. other more minor bugs: 1) graph of data does not appear, 2) attempts at selecting vectors by point and click don't work and data locations must be typed into dialog boxes.


Stack trace:


Other information:
Comment 1 Jody Goldberg 2007-06-24 18:11:13 UTC
Please supply a sample file, and more details on exactly how you selected the t-test.

PS.  The 'other more minor bugs' would be better entered as secondary reports with more detail, eg (1) has nowhere near enough detail to understand, let alone reproduce.

Thanks
Comment 2 g.m.feldman 2007-06-28 01:39:36 UTC
OK.

The data set does not make a difference.  Today, I just used 2 columns of data: A: 1, 2, 3.5 and B: 2, 2.5, 4.  The result was the same with larger sets of data.

After entering the data, the steps are:
1a) select the data  OR  1b) do not select the data;
2) select Tools;
3) select Statistical Analysis;
4) select Paired Data, Unpaired Data - Equal Variances, Unpaired Data - Unequal Variances;  (Known Variances was not tested);
5) hit Enter -- result CRASH -- Windows then gave the option to send a message to Microsoft.
6) Shortcut to causing the crash. Skip entering the data and just select a T-test option.

The same problem occurred on 2 PCs running XPSP2.  On is a recent Dell Optiplex on which I do not have Administrator privileges and the other is a 3 year old Sony laptop on which I do have privileges.

I'll re-evaluate the other problems after this one is repaired.

Thanks
Comment 3 Jody Goldberg 2007-06-28 02:54:54 UTC
replicated under linux trunk.
Comment 4 Jody Goldberg 2007-06-28 03:16:19 UTC
fixed.
Patch is in svn, and will be in the next version of gnumeric 1.7.11.
Comment 5 Jody Goldberg 2007-07-04 11:34:15 UTC
*** Bug 453644 has been marked as a duplicate of this bug. ***
Comment 6 Morten Welinder 2007-07-30 15:10:03 UTC
*** Bug 461760 has been marked as a duplicate of this bug. ***
Comment 7 Andreas J. Guelzow 2007-10-15 20:17:59 UTC
*** Bug 486415 has been marked as a duplicate of this bug. ***